--- a/Demo2/menucard/package.json
+++ b/Demo2/menucard/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "menucard",
+  "name": "reactmytodo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
-    "react-split-pane":"*" 
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
