--- a/dropbox/dropbox/node_server/package.json
+++ b/dropbox/dropbox/node_server/package.json
@@ -15,6 +15,8 @@
     "express": "~4.15.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.2.1",
+    "passport": "~0.2.0",
+    "passport-local": "~1.0.0",
     "glob": "^7.1.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
