--- a/Lab-1/Lab 1 /dropbox/dropbox/react_server/package.json
+++ b/Lab-1/Lab 1 /dropbox/dropbox/react_server/package.json
@@ -8,6 +8,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "*",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.2.1",
     "react-file-input": "^0.2.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
