--- a/Lab-1/Lab 1 /dropbox/dropbox/node_server/package.json
+++ b/Lab-1/Lab 1 /dropbox/dropbox/node_server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "cp": "^0.2.0",
+    "crypto": "^1.0.1",
     "debug": "~2.6.3",
     "ejs": "*",
     "express": "~4.15.2",
@@ -19,13 +20,13 @@
     "express-validator": "^4.2.1",
     "glob": "^7.1.2",
     "jade": "~1.11.0",
+    "kafka-node": "^2.2.3",
     "mongoose": "^4.12.4",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "passport": "~0.2.0",
-    "kafka-node": "^2.2.3",
-    "crypto": "^1.0.1",
     "passport-local": "~1.0.0",
+    "rimraf": "^2.6.2",
     "serve-favicon": "~2.4.2"
   }
 }
