--- a/Lab-1/Lab 1 /dropbox/dropbox/react_server/package.json
+++ b/Lab-1/Lab 1 /dropbox/dropbox/react_server/package.json
@@ -10,9 +10,11 @@
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.2.1",
     "react-file-input": "^0.2.5",
+    "react-image": "^1.3.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
+    "react-visibility-sensor": "^3.11.0",
     "redux": "^3.7.2"
   },
   "scripts": {
