--- a/Lab-3/SpringBootDemo/pom.xml
+++ b/Lab-3/SpringBootDemo/pom.xml
@@ -29,6 +29,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
